Closed
Bug 842430
Opened 12 years ago
Closed 12 years ago
BaselineCompiler: Assertion failure: numUnsynced == 0, at ion/BaselineBailouts.cpp:712
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Assigned: jandem)
References
Details
(Keywords: assertion, testcase, Whiteboard: [jsbugmon:update])
Attachments
(1 file)
1.26 KB,
patch
|
djvj
:
review+
|
Details | Diff | Splinter Review |
The following testcase asserts on baseline compiler branch revision 1c8552cc6ec4 (run with --ion-eager):
test();
function test()
({}).abstract;
test();
Assignee | ||
Comment 1•12 years ago
|
||
If we have a bailout and pcOffset == 0 && resumeAfter, we don't want to enter baseline JIT code at the prologue (we want to start at the second op).
Updated•12 years ago
|
Attachment #716069 -
Flags: review?(kvijayan) → review+
Assignee | ||
Comment 2•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•