Bug 842430 - Only enter baseline script prologue for non-resumeAfter bailouts. r=djvj